--- a/fluent.conf
+++ b/fluent.conf
@@ -1,10 +1,10 @@
-<source>
-  @type dummy
-  tag dummy.input
-  dummy {"message":"Hello, Fluentd!"}
-  rate 1
-</source>
+# This is the root config file, which only includes components of the actual configuration
 
-<match dummy.input>
-  @type stdout
-</match>
+# Do not collect fluentd's own logs to avoid infinite loops.
+<label @FLUENT_LOG>
+  <match fluent.**>
+    @type null
+  </match>
+</label>
+
+@include /etc/fluent/config.d/*.conf
